# autotools-hello-world

./: Makefile.in  README  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in
src/hello1/: Makefile.am  Makefile.in
src/hello2/: Makefile.am  Makefile.in  main.c
src/libhello/: Makefile.in
